1.9.18: Rewrite ItemEditor P.2